# RAG-Langchain

./: README.md  app.py  pyproject.toml  rag_chain.py
chroma_store/: chroma.sqlite3
