[project]
name = "genai-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.6.3",
    "ipykernel>=6.29.5",
    "langchain>=0.3.20",
    "langchain-community>=0.3.19",
    "openai>=1.66.3",
    "pypdf>=5.4.0",
    "streamlit>=1.43.2",
    "tiktoken>=0.9.0",
]
